# libdomain-qt-sample

./: CMakeLists.txt  README.RU.md  README.md  attributesmodel.cpp  attributesmodel.h  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  connectionsettings.cpp  connectionsettings.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: FindLibdomain.cmake
